# gr-drm

./: .gitignore  CMakeLists.txt  MANIFEST.md  README  README.md  README.txt
cpp_files/: drm_config.cpp  drm_config.h  drm_global_constants.h  drm_init_params.cpp  drm_init_params.h  drm_init_transmitter.cpp  drm_params.cpp  drm_params.h  drm_tables.cpp  drm_tables.h  drm_tables_mapping.cpp  drm_tables_params.cpp  drm_transm_params.cpp  drm_transm_params.h  main_test.cpp
docs/: CMakeLists.txt  README.drm  drm_receiver_design.md
examples/: rx_test.grc
flow_graphs/: channel_sim.grc  combined_sync_test.grc  drm_mlc_4qam.grc  drm_plus_transmitter_4_4.grc  drm_transmitter.grc  drm_transmitter.py  drm_transmitter_1.grc  drm_transmitter_16_16.grc  drm_transmitter_16_4.grc  drm_transmitter_64sm_16.grc  drm_transmitter_64sm_4.grc  drm_transmitter_RMB_SO3.grc  drm_transmitter_RME_4.grc
gr-drm/: CMakeLists.txt
gr-drm/grc/: CMakeLists.txt  drm_add_tailbits_vbvb.xml  drm_audio_decoder_vbs.xml  drm_audio_encoder_sb.xml  drm_audio_encoder_svb.xml  drm_cell_mapping_cc.xml  drm_cell_mapping_vbvb.xml  drm_cell_mapping_vcvc.xml  drm_cp_corr_cc.xml  drm_dc_corr_cc.xml  drm_generate_fac_vb.xml  drm_generate_sdc.xml  drm_generate_sdc_b.xml  drm_generate_sdc_vb.xml  drm_interleaver_bb.xml  drm_interleaver_vbvb.xml  drm_interleaver_vcvc.xml  drm_m3ufile_source_f.xml  drm_partitioning_16_bb.xml  drm_partitioning_16_vbvb.xml  drm_partitioning_4_bb.xml  drm_partitioning_4_vbvb.xml  drm_partitioning_64sm_bb.xml  drm_partitioning_64sm_vbvb.xml  drm_partitioning_vbvb.xml  drm_punct_vbvb.xml  drm_qam_map_vbvb.xml  drm_qam_map_vbvc.xml  drm_scrambler_bb.xml  drm_scrambler_vbvb.xml  drm_source_encoder_sb.xml  drm_vec_demux_vbvb.xml
gr-drm/include/: CMakeLists.txt  drm_add_tailbits_vbvb.h  drm_api.h  drm_audio_decoder_vbs.h  drm_audio_encoder_sb.h  drm_audio_encoder_svb.h  drm_cell_interleaver_vcvc.h  drm_cell_mapping_vbvb.h  drm_cell_mapping_vcvc.h  drm_config.h  drm_cp_corr_cc.h  drm_dc_corr_cc.h  drm_generate_fac_vb.h  drm_generate_sdc.h  drm_generate_sdc_vb.h  drm_global_constants.h  drm_interleaver_vbvb.h  drm_interleaver_vcvc.h  drm_params.h  drm_partitioning_vbvb.h  drm_punct_vbvb.h  drm_qam_map_vbvb.h  drm_qam_map_vbvc.h  drm_rx_conf.h  drm_scrambler_bb.h  drm_scrambler_vbvb.h  drm_source_encoder_sb.h  drm_tables.h  drm_transm_params.h  drm_util.h  drm_vec_demux_vbvb.h
gr-drm/include/drm/: CMakeLists.txt  add_tailbits_vbvb.h  audio_decoder_vbs.h  audio_encoder_svb.h  cell_interleaver_vcvc.h  cell_mapping_cc.h  cell_mapping_vcvc.h  config.h  generate_fac_vb.h  generate_sdc_b.h  generate_sdc_vb.h  interleaver_bb.h  interleaver_vbvb.h  interleaver_vcvc.h  m3ufile_source_f.h  params.h  partitioning_bb.h  partitioning_vbvb.h  punct_bb.h  punct_vbvb.h  qam_map_vbvc.h  scrambler_vbvb.h  tables.h  transm_params.h
gr-drm/lib/: CMakeLists.txt  add_tailbits_vbvb_impl.cc  add_tailbits_vbvb_impl.h  audio_decoder_vbs_impl.cc  audio_decoder_vbs_impl.h  audio_encoder_svb_impl.cc  audio_encoder_svb_impl.h  cell_interleaver_vcvc_impl.cc  cell_interleaver_vcvc_impl.h  cell_mapping_cc_impl.cc  cell_mapping_cc_impl.h  cell_mapping_vcvc_impl.cc  cell_mapping_vcvc_impl.h  config.cc  drm_add_tailbits_vbvb.cc  drm_audio_decoder_vbs.cc  drm_audio_encoder_sb.cc  drm_audio_encoder_svb.cc  drm_cell_interleaver_vcvc.cc  drm_cell_mapping_vbvb.cc  drm_cell_mapping_vcvc.cc  drm_config.cc  drm_config.h  drm_cp_corr_cc.cc  drm_dc_corr_cc.cc  drm_generate_fac_vb.cc  drm_generate_sdc.cc  drm_generate_sdc_vb.cc  drm_global_constants.h  drm_interleaver_vbvb.cc  drm_interleaver_vcvc.cc  drm_params.cc  drm_partitioning_vbvb.cc  drm_punct_vbvb.cc  drm_qam_map_vbvb.cc  drm_qam_map_vbvc.cc  drm_scrambler_bb.cc  drm_scrambler_vbvb.cc  drm_source_encoder_sb.cc  drm_tables_mapping.cc  (+44 more)
gr-drmrx/: CMakeLists.txt
gr-drmtx/: CMakeLists.txt
grc/: CMakeLists.txt  drm_add_tailbits_bb.block.yml  drm_add_tailbits_bb.xml  drm_audio_decoder_bf.xml  drm_audio_encoder_sb.block.yml  drm_audio_encoder_sb.xml  drm_cell_mapping_cc.block.yml  drm_cell_mapping_cc.xml  drm_config.block.yml  drm_config.xml  drm_generate_fac_b.block.yml  drm_generate_fac_b.xml  drm_generate_sdc_b.block.yml  drm_generate_sdc_b.xml  drm_interleaver_bb.block.yml  drm_interleaver_bb.xml  drm_interleaver_cc.block.yml  drm_interleaver_cc.xml  drm_m3ufile_source_f.block.yml  drm_m3ufile_source_f.xml  drm_mlc_bc.block.yml  drm_mlc_bc.xml  drm_partitioning_16_bb.block.yml  drm_partitioning_16_bb.xml  drm_partitioning_4_bb.block.yml  drm_partitioning_4_bb.xml  drm_partitioning_64sm_bb.block.yml  drm_partitioning_64sm_bb.xml  drm_punct_bb.block.yml  drm_punct_bb.xml  drm_qam_map_bc.block.yml  drm_qam_map_bc.xml  drm_scrambler_bb.block.yml  drm_scrambler_bb.xml  drm_synchronization_cc.xml
hier_blocks/: drm_mlc_16qam.grc  drm_mlc_16qam_vbvb.py  drm_mlc_16qam_vbvb.py.xml  drm_mlc_16qam_vbvc.py  drm_mlc_16qam_vbvc.py.xml  drm_mlc_4qam.grc  drm_mlc_4qam_vbvb.py  drm_mlc_4qam_vbvb.py.xml  drm_mlc_4qam_vbvc.py  drm_mlc_4qam_vbvc.py.xml  drm_mlc_64qam_sm.grc  (+4 more)
include/drm/: CMakeLists.txt  add_tailbits_bb.h  audio_decoder_bf.h  audio_encoder_sb.h  drm_tables.h  generate_fac_b.h  interleaver_cc.h  qam_map_bc.h  scrambler_bb.h  synchronization_cc.h
lib/: CMakeLists.txt  add_tailbits_bb_impl.cc  add_tailbits_bb_impl.h  audio_decoder_bf_impl.cc  audio_decoder_bf_impl.h  audio_encoder_sb_impl.cc  audio_encoder_sb_impl.h  cell_mapping_cc_impl.cc  config.h  drm_config.cc  drm_config.h  drm_global_constants.h  drm_params.cc  drm_params.h  drm_tables.h  drm_tables_mapping.cc  drm_tables_params.cc  drm_transm_params.cc  drm_transm_params.h  drm_util.cc  generate_fac_b_impl.h  generate_sdc_b_impl.cc  generate_sdc_b_impl.h  interleaver_bb_impl.cc  interleaver_cc_impl.cc  interleaver_cc_impl.h  kernel_fixed_lag_correlation.cpp  kernel_fixed_lag_correlation.h  m3ufile_source_f_impl.cc  m3ufile_source_f_impl.h  punct_bb_impl.cc  punct_bb_impl.h  qa_drm.h  qam_map_bc_impl.cc  scrambler_bb_impl.cc  scrambler_bb_impl.h  synchronization_cc_impl.cc  synchronization_cc_impl.h  test_drm.cc
misc/: drm_init.i  (+3 more)
(+249 files in other folders)
